<resources>
    <string name="app_name">中职生智慧数字校园</string>
    <string name="djss">点击搜索</string>
    <string name="ss">搜索</string>
    <string name="zzs">中职生智慧数字校园</string>
    <string name="xxs">放飞理想,铸就辉煌</string>
    <string name="tge">职业教育改革，推动物流产业职业教育改革发展，这个会议在深召开</string>
    <string name="fds">全国物流职业教育教学指导委员会...</string>
    <string name="la_hd">社团活动</string>
    <string name="la_xl">心理咨询</string>
    <string name="la_kt">第二课堂</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sy">首页</string>
    <string name="gyhd">直播</string>
    <string name="xd">订餐</string>
    <string name="sjfx">我的</string>
    <string name="ad_yg">义工服务</string>
    <string name="swzl">失物招领</string>
    <string name="todo">todo</string>
    <string name="dv1">福建省中华职业教育社第九次代表大会在福州召开</string>
    <string name="dv1_1">省中华职业教育社第九次...</string>
    <string name="dv2">今年一年培训67.65万人次！河南全力推动职业教育建高地</string>
    <string name="dv2_1">河南省全力推动职业教育</string>
    <string name="dv3">教育局通报职校克扣学生实习报酬 近日，知名打假...</string>
    <string name="dv3_1">王海助理讲述职校克扣实习...</string>
    <string name="moreNews">更多新闻</string>
    <string name="xxxxx">xxxxx学校</string>
    <string name="_13009">用户13009</string>
    <string name="dv4">忆百年团史 青春心向党</string>
    <string name="dv4_1">为庆祝建团100周年，深...</string>
    <string name="dv5">召开第十五届学生代表大会</string>
    <string name="dv5_1">大会在嘹亮的国歌声中拉开帷幕。学校团委...</string>
    <string name="dv6">厚植家国情怀，争做新时代的奋斗者、追梦人</string>
    <string name="dv6_1">徐校长以“家国情怀”为关键词，以图片、视频...</string>
    <string name="newmorw">新闻详情</string>

    <string name="login_click">登录</string>
    <string name="dc">订餐</string>
    <string name="jcrq">就餐日期</string>
    <string name="jclx">就餐类型</string>
    <string name="zc">早餐</string>
    <string name="wc">午餐</string>
    <string name="wanc">晚餐</string>
    <string name="yt">油条</string>
    <string name="cm">炒面</string>
    <string name="z">粥</string>
    <string name="mb">面包</string>
    <string name="tc">兰豆+冬菇+玉米+米饭</string>
    <string name="jq">￥8</string>
    <string name="tc2">荷兰豆+洋葱炒肉+炸豆腐+米饭</string>
    <string name="s">￥6</string>
    <string name="tc3">番茄鸡蛋+土豆丝+冬瓜焖肉+米饭</string>
    <string name="cj">番茄鸡蛋+紫菜汤+炒猪肉+芹菜+米饭</string>
    <string name="cj1">酸菜+玉米芹菜+炒白菜+米饭</string>
    <string name="xy">宵夜</string>
    <string name="ydlm">意大利面</string>
    <string name="hf">河粉</string>
    <string name="dg">蛋糕</string>
    <string name="jc">奥尔良鸡翅</string>
    <string name="sj">水饺</string>

    <string name="xlzx">心理咨询</string>
    <string name="x1">落实消防责任 防范安全风险——“119”消防宣传教育活动落实消防责任 防范安全风险——“119”消防宣传教育活动</string>
    <string name="xlz">学生心理健康问题与校园心理咨询服务:关爱青春,助力成长学生心理健康问题与校园心理咨询服务:关爱青春,助力成长</string>
    <string name="tj">资询师推荐</string>
    <string name="gd">更多</string>
    <string name="name">梁老师</string>
    <string name="fs">服务方式：语言 视频</string>
    <string name="pf">综合评分5.0</string>
    <string name="ljyy">立即预约</string>
    <string name="namw1">孟老师</string>
    <string name="nanw">张老师</string>
    <string name="name1">陈老师</string>
    <string name="name2">范老师</string>
    <string name="ly">擅长领域:情绪压力 人际关系 个人成长 心理健康</string>
    <string name="xq">咨询师详情</string>
    <string name="grjj">个人简介</string>
    <string name="t">中科税心理所造星与心理学专业开究生</string>
    <string name="t1">国家职业资格认证二级心理咨询师</string>
    <string name="t2">婚烟与家庭心里指号师</string>
    <string name="t3">中国心理卫生协会合员</string>
    <string name="jjxq">简介详情</string>
    <string name="nr">\u3000\u3000负责学院心理健康服务工作，带领心理部学生顺利完成了心理健康服务站和“心灵树洞”的日常工作，并开展了一系列丰富多彩的心理健康教育活动，如“爱在雷锋月 情满女神节”“‘锋’华正茂恰少年 学业互助团活动”“‘锋’华正茂恰少年 雷锋月征文”“温暖触碰希望 自由拥抱”“‘舒缓身心 激扬青春’趣味运动会”等心理健康宣传系列活动。</string>
    <string name="zxs">咨询师详情</string>
    <string name="sb">眼镜</string>
    <string name="time">丢失时间：11/8 15:32</string>
    <string name="zl">地点：教学区走廊</string>
    <string name="ma">帽子</string>
    <string name="ej">耳机</string>
    <string name="cb">茶杯</string>
    <string name="ys">雨伞</string>
    <string name="sbl">手表</string>
    <string name="sl">手链</string>
    <string name="wt">外套</string>
    <string name="wod1">　　　为了进一步提升三年级学生社会实践能力，深化校企合作，携手共育英才，我校分批组织了2021级部分学生到鹤山市质优企业进行岗位实习。 岗位实习出发前，学校召开了岗位实习动员暨安全教育会，强调岗位实习的重要性，要求同学们严格遵守实习单位的规章制度，履行自己的职责，同时强调岗位实习期间各项安全注意事项，希望同学们通过实习融入企业、提高技能、锻炼自己。 9月5日至8日，共486人分别前往广东世运电路科技股份有限公司、广东索奇电器科技有限公司、广东斯柯电器有限公司、碧桂园天麓湖凤凰酒店、方圆福朋喜来登酒店进行岗位实习。 到达各实习企业后，在人事主管部门的安排和各班主任协助以及驻厂老师带领下，同学们顺利完成入宿、面试、体检、办卡等入职流程。最后，叶武主任深情寄语：希望同学们在岗位实习中用心学习企业文化，融入和适应企业的工作和生活，学会学习、学会做人、学会做事、学会沟通。</string>
    <string name="_1">第1集</string>
    <string name="hfang">直播回放</string>
    <string name="_2">第2集</string>

    <string name="sthd">社团活动</string>
    <string name="nr1">快来了解丰富多彩的社团活动，选择自己心仪的社团吧！ 快来了解丰富多彩的社团活动，选择自己心仪的社团吧！</string>
    <string name="st">口风琴社团</string>
    <string name="nr3">社团简介：为了丰富学生的校园生活，培养学生的动手动脑以及音乐审美能力，口..</string>
    <string name="bm">报名</string>
    <string name="ms">创意美术社团</string>
    <string name="st4">社团简介：社团课程以低年级学生的启蒙加创意绘画、手工造型等课程为主，社团课程更加注...</string>
    <string name="g">美术社团</string>
    <string name="g3">目前社团开展的有国画、儿童画、线描画和手工轻黏土、剪纸等课程...</string>
    <string name="stxq">社团详情</string>
    <string name="stjj">社团简介</string>
    <string name="nr5">\u3000\u3000为了丰富学生的校园生活，培养学生的动手动脑以及音乐审美能力，口风琴社团通过社团活动提升学生鉴赏能力和音乐学习能力，同时丰富学生的课余生活，展现我校学生的活力，促进德智体美劳的全面发展，陶冶学生情操，展示音乐教学的特色，给我校学生提供一个锻炼自己的机会和展现自己的舞台。</string>
    <string name="ygfw">义工服务</string>
    <string name="k3">在志愿者服务队成立之初，相关管理制度既已制定完成。 在志愿者服务队成立之初，相关管理制度既已制定完成。</string>
    <string name="jt">文明交通</string>
    <string name="nr4">义工活动：志愿者们身着志愿服，手持劝导旗，协助交警进行文明交...</string>
    <string name="lme">绿美榕城</string>
    <string name="yghd">义工活动：清理绿化带、沿路杂草，捡拾白色垃圾活动中，志愿者们带着扫帚、铁锨...</string>
    <string name="cnyz">幸福驿站</string>
    <string name="nr7">在幸福驿站周边，志愿者们还拿起垃圾夹、扫把等清扫工具，在公共...</string>
    <string name="xqyg">义工活动详情</string>
    <string name="ygxq">义工简介详情</string>
    <string name="cd">\u3000\u3000志愿者们身着志愿服，手持劝导旗，协助交警进行文明交通劝导，引导往来群众遵守交通规则。志愿者们的耐心劝导和指引，也得到了来往行人的理解和配合，共同努力创造了一个便捷畅通、文明和谐的假期交通环境。</string>
    <string name="shsj">社会实践</string>
    <string name="ggs">假社会实践，便是一种最好的回答！跟随我们的步伐，来看看! 假社会实践，便是一种最好的回答！跟随我们的步伐，来看看!</string>
    <string name="ylsh">养老院社会实践</string>
    <string name="npx">力除牛皮癣实践</string>
    <string name="tysh">体验农村社会实践</string>
    <string name="dekt">第二课堂</string>
    <string name="autocad_2006">AutoCAD 2006</string>
    <string name="photoshop_cc">Photoshop CC</string>
    <string name="design_cso">Design CSO</string>
    <string name="jcs">计算机应用基础</string>
    <string name="android">Android 软件开发</string>
    <string name="aboder_ai">Aboder AI</string>
    <string name="yinsi_login">《中职生智慧数字校园 用户协议》</string>
    <string name="read_login">我已确认并同意</string>
    <string name="password_ui">输入密码</string>
    <string name="username_ui">请输入用户名</string>
    <string name="login_text">登录</string>
    <string name="wcom">欢迎使用\n\n中职生智慧数字校园平台</string>
    <string name="gb">5秒 关闭</string>
    <string name="ssdt">回车搜索课程</string>
    <string name="home">选择课程</string>
    <string name="ljbm">立即报名</string>
    <string name="grda">个人档案</string>
    <string name="sitting">设置</string>
    <string name="kcxq">课程详情</string>
    <string name="autocad">\u3000\u3000autocad是一款自动计算机辅助设计软件的课程，可以用于二维绘图、详细绘制、设计文档和基本三维设计，现已经成为国际上广为流行的绘图工具。广泛应用于土木建筑，装饰装潢，工业制图，工程制图，电子工业，服装加工、城市规划、园林设计、机械设计、航空航天、轻工化工等诸多领域。</string>
    <string name="xxjl">学习记录</string>
    <string name="kc">课程</string>
    <string name="sx">数学</string>
    <string name="yw">语文</string>
    <string name="yy">英语</string>
    <string name="wdsc">我的收藏</string>
    <string name="ssp">随手拍</string>
    <string name="time1">2020年11月21日</string>
    <string name="time2">2020年11月20日</string>
    <string name="bj">笔记</string>
    <string name="bjjl">笔记记录</string>
    <string name="nr8">添加笔记内容关键词，强调看点封面文字与标题相符或有一定关联性结合画风风格选择匹配的字体或者元素</string>
</resources>