<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/ble"
        android:textSize="25sp"
        android:padding="10dp"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="85dp"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_account_circle_24"
                android:contentDescription="@string/todo" />
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/username_ui"
                android:padding="10dp"
                android:background="@drawable/border2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_password_24"
                android:contentDescription="@string/todo" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/password_ui"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/border2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_login_checkbox"
                android:theme="@style/MyCheckbox"
                android:text="@string/read_login" />
            <TextView
                android:id="@+id/login_userys_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ble"
                android:text="@string/yinsi_login"/>
        </LinearLayout>

        <Button
            android:id="@+id/click_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/xz_01"
            android:text="@string/login_click"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>