<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yuyxq">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/blue"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/exit"
                    android:layout_width="50dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/babefore"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <TextView
                    android:paddingStart="-50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/zxs"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/blue">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="100dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/a1"
                            android:scaleType="fitXY">
                        </ImageView>
                    </androidx.cardview.widget.CardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:textSize="13sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ly"
                            android:textColor="@color/white"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:textSize="13sp"
                            android:paddingRight="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xq"
                    android:paddingLeft="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/black">

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/grjj"
                        android:textSize="17sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/t"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/hs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/t1"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/hs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/t2"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/hs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/t3"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/hs"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/black">

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/jjxq"
                        android:textSize="17sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/nr"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:id="@+id/click_ok"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ljyy"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="16sp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>