<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stxq">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/blue"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/exit"
                    android:layout_width="50dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/babefore"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <TextView
                    android:paddingStart="-50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stxq"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/s1"
                    android:scaleType="fitXY"/>
            </LinearLayout>
            <!--        -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/st"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="5dp"/>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/stjj"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/nr5"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:id="@+id/clk_a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/blue">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/bm"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <!--        -->
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>