<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dektGd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/blue"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/exit"
                    android:layout_width="50dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/babefore"
                        android:layout_margin="5dp"/>
                </LinearLayout>

                <TextView
                    android:paddingStart="-50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kcxq"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/u1"
                    android:scaleType="fitXY"/>
            </LinearLayout>
            <!--        -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/autocad_2006"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="课程详情"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/autocad"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!--        -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/blue">
                        <TextView
                            android:id="@+id/butn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/bm"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <!--        -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>